[tool.poetry]
name = "Server-cloner-SelfBot-24-7"
version = "0.1.0"
description = ""
authors = ["SoulCodez and idk"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
